# ampland

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.github/actions/prepare-rust/: action.yml
.github/workflows/: build-binaries.yml  generate-manifest.yml  publish-manifest.yml  release-manifest-update.yml  test.yml
assets/manifest/: installers.toml  node.toml  python.toml
docs/superpowers/plans/: 2026-03-28-self-update.md
docs/superpowers/specs/: 2026-03-28-self-update-design.md
scripts/: publish-manifest.sh
src/: cache.rs  cli.rs  config.rs  doctor.rs  embedded_shim_main.rs  error.rs  installer.rs  main.rs  manifest.rs  paths.rs  resolve.rs  shim.rs  tool_version_file.rs  updater.rs
tests/: build_binaries_workflow.rs  cli_smoke.rs
