[package]
name = "ampland"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
directories = "5.0.1"
fs2 = "0.4.3"
globset = "=0.4.14"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
toml = "0.8.12"
