[package]
name = "ampland"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
directories = "5.0.1"
fs2 = "0.4.3"
globset = "=0.4.14"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
toml = "0.8.12"
ed25519-dalek = "2.1.1"
flate2 = "1.0.28"
sha2 = "0.10.8"
tar = "0.4.40"
tempfile = "3.10.1"
ureq = { version = "2.9.6", features = ["tls"] }
xz2 = "0.1.7"
zip = "0.6.6"
